{
    "version": 1,
    "name": "PlayerController",
    "maps": [
        {
            "name": "Player",
            "id": "6a158a25-3437-4749-a278-13a21c8a5c94",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "9be08d05-613d-4b7d-a7dc-253dfa46d3f7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "c1556be2-4837-4504-aa09-b327a583cc18",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "a009b70e-f9cb-4c90-a031-868cb7634eb0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "74d35f16-0377-417d-9f0f-70afd433a40e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}